# barry

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  README.md  barry.c  barry.cc  barry.hh  barry_detail.hh  build-o-matic.sh  configure.ac  dock-o-matic.sh  main.cc  test-wrapper.sh  test.sh
m4/: macro_dir.md
test/: options.cc
tests/: Makefile.am  testsuite.at  testsuite.at.in
